<resources>
    <string name="app_name">RikingCalendar</string>
    <string name="calendar">Calendar</string>
    <string name="add_schedule">Add schedule</string>
    <string name="status_output">Status Output…</string>


    <string name="drawer_open">Menu open</string>
    <string name="drawer_close">Menu closed</string>
    <string name="hello_world">Custom drawer implementation for Material design apps.\n\nMade by <b>Heinrich Reimer</b></string>
    <string name="hello_world2">Example of using <i>DrawerFrameLayout</i> for the drawer.\nThis drawer has a custom max width of 250dp.\n\nCheck out the sample code on GitHub!</string>
    <string name="hello_world3">Example of using <i>DrawerActivity</i> for the drawer.\nThis drawer shows theming and has a custom <i>Toolbar</i> set.\n\nVery simple ;)</string>
    <string name="action_github">GitHub</string>
    <string name="lorem_ipsum_short" translatable="false">Travel</string>
    <string name="lorem_ipsum_medium" translatable="false">Around the world</string>
    <string name="lorem_ipsum_long" translatable="false">It is fantastic if we can travel around.</string>

    <string name="drawer_frame_layout">DrawerFrameLayout</string>
    <string name="drawer_activity">DrawerActivity</string>
    <string name="date">Date</string>
    <string name="country">Country</string>
    <string name="currency">Currency</string>
    <string name="vocation">Vocation</string>
    <string name="reminder">Reminder</string>
    <string name="to_do">To Do</string>
    <string name="personal">Personal</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="today">Today</string>
    <string name="input_rememinds">Please input reminder title</string>
    <string name="please_select_remind_time">Please select remind time</string>
    <string name="all_day">All day</string>
    <string name="please_select_remind_way">Remind way</string>
    <string name="remind_repeat_way">Repeat</string>
    <string name="no_remind">Not remind</string>

    <string-array name="subTittles">
        <item>Job</item>
        <item>Vocation</item>
        <item>Remind</item>
        <item>Info</item>

    </string-array>
</resources>
