<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_schedule"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/done"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <com.flyco.tablayout.SlidingTabLayout
        android:id="@+id/top_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_tab_height"
        android:background="@android:color/white"
        app:tl_divider_color="@color/divider_color_d9d9d9"
        app:tl_divider_width="1.3dp"
        app:tl_indicator_color="@color/color_29a1f7"
        app:tl_indicator_height="4dp"
        app:tl_indicator_width_equal_title="false"
        app:tl_tab_space_equal="true"
        app:tl_textSelectColor="@color/color_29a1f7"
        app:tl_textUnselectColor="@color/color_323232"
        app:tl_textsize="14sp"
        app:tl_underline_color="@color/divider_color_d9d9d9"
        app:tl_underline_height="1dp" />

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v4.view.ViewPager>
</LinearLayout>